test/tests/errors/error-class-no-rec-func3.sm
// false
// false
// false
/**/
/**/

program {
    class T {
        private rec func x(): int {
            1
        }
    }
}